Add basic program functionality in new GBG.Main unit
GBG.Main contains the main program code entirely within TMain. It also
contains some supporting types.

GBG.dpr updated to simply call TMain.Run to run the program.

--- a/src/GBG.dproj
+++ b/src/GBG.dproj
@@ -191,6 +191,7 @@
         <DelphiCompile Include="$(MainSource)">
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
+        <DCCReference Include="GBG.Main.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
