Refactor binary garbage generation code
Code that fills the buffer with random bytes has been pulled out into
an extensible class heirachy contained in two new units, that were added
to the project.

Classes:
  TBaseGenerator in GBG.Generator.Base unit
  TBinaryGarbageGenerator in GBG.Generator.BinaryGarbage unit

Also added factory class in GBG.Generator.Base.

--- a/src/GBG.dproj
+++ b/src/GBG.dproj
@@ -201,6 +201,8 @@ $(PreBuildEvent)]]></PreBuildEvent>
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
         <DCCReference Include="GBG.Main.pas"/>
+        <DCCReference Include="GBG.Generator.Base.pas"/>
+        <DCCReference Include="GBG.Generator.BinaryGarbage.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
