Specify default line ending for text files

--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,15 @@
 
 # Include Markdown files in stats
 *.md linguist-detectable
+
+# Specify line endings for text files
+.pas text
+.dpr text
+.dproj text
+.gitignore text
+.gitattributes text
+.rc text
+.vi text
+.md text
+.bat text
+VERSION text
