Refactor number formatting into new class & unit
Code that parses and formats UInt64 integers in delimited format, e.g.
2000000 <=> 2,000,000.

Code extracted into TNumberFmt in GBG.NumberFmt unit. Code in TMain
changed to use this code.

--- a/src/GBG.dproj
+++ b/src/GBG.dproj
@@ -203,6 +203,7 @@ $(PreBuildEvent)]]></PreBuildEvent>
         <DCCReference Include="GBG.Main.pas"/>
         <DCCReference Include="GBG.Generator.Base.pas"/>
         <DCCReference Include="GBG.Generator.BinaryGarbage.pas"/>
+        <DCCReference Include="GBG.NumberFmt.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
