Refactor command line handling into new class & unit
Created new GBG.Params unit containing TParams class that parses command
line and exposes information as properties.

Updated TMain to use TParams.

--- a/src/GBG.dproj
+++ b/src/GBG.dproj
@@ -204,6 +204,7 @@ $(PreBuildEvent)]]></PreBuildEvent>
         <DCCReference Include="GBG.Generator.Base.pas"/>
         <DCCReference Include="GBG.Generator.BinaryGarbage.pas"/>
         <DCCReference Include="GBG.NumberFmt.pas"/>
+        <DCCReference Include="GBG.Params.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
