Extract Exception class definitions into new unit
Exception definitions removed from GBG.Main into new GBG.Exceptions
unit.

GBG.Main updated to use new exceptions unit.
 your changes. Lines starting

--- a/src/GBG.dproj
+++ b/src/GBG.dproj
@@ -205,6 +205,7 @@ $(PreBuildEvent)]]></PreBuildEvent>
         <DCCReference Include="GBG.Generator.BinaryGarbage.pas"/>
         <DCCReference Include="GBG.NumberFmt.pas"/>
         <DCCReference Include="GBG.Params.pas"/>
+        <DCCReference Include="GBG.Exceptions.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
