Add support for generating random printable ASCII
Add support to TParams for new -a (or /a) command that specifies
generated garbage should be printable ASCII text.

Add GeneratorType property to TParams that exposes type of generator
required: Binary unless -a option provided, then ASCII.

Add new GBG.Types unit to project containing TGeneratorType enumeration.

Add new GBG.Generator.PrintableASCIIGarbage generator unit to project to
generate the prinatble ASCII garbage.

Modify TMain to choose generator classes depending on generator type requested
on command line.

Modify TGeneratorFactory to create instances of either binary or printable ASCII
generators

Update TMain.Usage method to add description of -a option

--- a/src/GBG.dproj
+++ b/src/GBG.dproj
@@ -206,6 +206,8 @@ $(PreBuildEvent)]]></PreBuildEvent>
         <DCCReference Include="GBG.NumberFmt.pas"/>
         <DCCReference Include="GBG.Params.pas"/>
         <DCCReference Include="GBG.Exceptions.pas"/>
+        <DCCReference Include="GBG.Types.pas"/>
+        <DCCReference Include="GBG.Generator.PrintableASCIIGarbage.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
