Rename GBG.PrintableASCIIGarbage as GBG.ASCIIGarbage
Updated references to unit in project files and in GBG.Generator.Base
unit.

--- a/src/GBG.dproj
+++ b/src/GBG.dproj
@@ -207,7 +207,7 @@ $(PreBuildEvent)]]></PreBuildEvent>
         <DCCReference Include="GBG.Params.pas"/>
         <DCCReference Include="GBG.Exceptions.pas"/>
         <DCCReference Include="GBG.Types.pas"/>
-        <DCCReference Include="GBG.Generator.PrintableASCIIGarbage.pas"/>
+        <DCCReference Include="GBG.Generator.ASCIIGarbage.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
