Add GBG.AppInfo unit to project
New unit containing TAppInfo that gets the application compile date
and product version.

--- a/src/GBG.dproj
+++ b/src/GBG.dproj
@@ -208,6 +208,7 @@ $(PreBuildEvent)]]></PreBuildEvent>
         <DCCReference Include="GBG.Exceptions.pas"/>
         <DCCReference Include="GBG.Types.pas"/>
         <DCCReference Include="GBG.Generator.ASCIIGarbage.pas"/>
+        <DCCReference Include="GBG.AppInfo.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
